# opengl-practice

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
include/GLFW/: glfw3.h  glfw3native.h
include/glad/: glad.h
include/glengine/: filesystem.hpp  glengine.hpp  mesh.hpp  shader.hpp
include/glm/: common.hpp  fwd.hpp
include/glm/gtx/: easing.inl
include/glm/simd/: neon.h
include/glservice/: filesystem.hpp  glservice.hpp  libinit.hpp  shader.hpp
include/glservice/camera/: BaseCamera.hpp  Camera3DoFController.hpp  Camera5DoFController.hpp  Camera6DoFController.hpp  OrthographicCamera.hpp  PerspectiveCamera.hpp  camera.hpp
lib/: glad.c
resources/: glossinessMap.hdr
src/1-triangle/: CMakeLists.txt  main.cpp  triangleVS.glsl
src/2-camera/: CMakeLists.txt  main.cpp
src/2-camera/shaders/: cameraVS.glsl
src/3-basic_lighting/: CMakeLists.txt  blinnPhongFS.glsl  blinnPhongVS.glsl  lightFS.glsl  lightVS.glsl  main.cpp  objectFS.glsl  objectVS.glsl
src/3-basic_lighting/shaders/: blinnPhongVS.glsl
src/4-advanced_opengl/: CMakeLists.txt  blinnPhongFS.glsl  blinnPhongVS.glsl  depthFS.glsl  dynamicLODQuadTES.glsl  instanceVS.glsl  lensFS.glsl  lenseFS.glsl  lightFS.glsl  lightVS.glsl  main.cpp  mirrorFS.glsl  normalGS.glsl  normalVS.glsl  objectFS.glsl  objectVS.glsl  outlineFS.glsl  screenFS.glsl  screenVS.glsl  skyboxFS.glsl  tessellationTCS.glsl  tessellationTES.glsl  tessellationVS.glsl
src/4-advanced_opengl/shaders/: mirrorFS.glsl  normalFS.glsl  proceduralTextureCS.glsl  screenFS.glsl  silhouetteSmoothingTCS.glsl  skyboxVS.glsl
src/5-advanced_lighting/: CMakeLists.txt  blinnPhongFS.glsl  blinnPhongVS.glsl  depthFS.glsl  dynamicLODQuadTCS.glsl  dynamicLODQuadTES.glsl  lensFS.glsl  lenseFS.glsl  lightFS.glsl  main.cpp  mirrorFS.glsl  normalFS.glsl  normalGS.glsl  normalVS.glsl  outlineFS.glsl  outlineVS.glsl  screenFS.glsl  shadowMap2DFS.glsl  shadowMap2DVS.glsl  shadowMapCubeGS.glsl  shadowMapCubeVS.glsl  shadowMapVS.glsl  silhouetteSmoothingTES.glsl  skyboxFS.glsl  skyboxVS.glsl
src/5-advanced_lighting/shaders/: lightFS.glsl  proceduralTextureCS.glsl  shadowMapCubeFS.glsl  silhouetteSmoothingTES.glsl  skyboxFS.glsl
src/basic_lighting/: CMakeLists.txt  main.cpp  objectFS.glsl  objectVS.glsl  sourceFS.glsl  sourceVS.glsl
src/camera/: CMakeLists.txt  camera.cpp  camera.hpp  main.cpp  vertexShader.glsl
src/glengine/: CMakeLists.txt  filesystem.cpp  gldebug.cpp  gldebug.hpp  glengine.cpp  glengine.hpp  glinit.cpp  glinit.hpp  mesh.cpp  shader.cpp
src/glengine/SceneObject/: SceneObject.cpp  SceneObject.hpp
src/glengine/SceneObject/Camera/: BaseCamera.cpp  BaseCamera.hpp  Camera3DoFController.cpp  Camera3DoFController.hpp  Camera5DoFController.cpp  Camera5DoFController.hpp  Camera6DoFController.cpp  Camera6DoFController.hpp  OrthographicCamera.cpp  OrthographicCamera.hpp  PerspectiveCamera.cpp  PerspectiveCamera.hpp  camera.hpp
src/glengine/SceneObject/Camera/Controller/: Controller3DoF.cpp  Controller3DoF.hpp  Controller5DoF.cpp  Controller5DoF.hpp  Controller6DoF.cpp  Controller6DoF.hpp  controller.hpp
src/glengine/SceneObject/Component/: Component.cpp  Component.hpp  component.inc
src/glengine/SceneObject/Component/Camera/: BaseCamera.cpp  BaseCamera.hpp  OrthographicCamera.cpp  OrthographicCamera.hpp  PerspectiveCamera.cpp  PerspectiveCamera.hpp  camera.inc
src/glengine/SceneObject/Component/Camera/Controller/: Controller3DoF.hpp  Controller5DoF.cpp  Controller5DoF.hpp  Controller6DoF.cpp  Controller6DoF.hpp  controller.hpp
src/glengine/SceneObject/Component/Light/: BaseLight.cpp  BaseLight.hpp  DirectionalLight.cpp  DirectionalLight.hpp  PointLight.cpp  PointLight.hpp  SpotLight.cpp  SpotLight.hpp  light.inc
src/glengine/SceneObject/Component/Mesh/: Mesh.cpp  Mesh.hpp
src/glengine/SceneObject/Component/Mesh/procedural/: calculateTangent.cpp  generateCube.cpp  generateIcoSphere.cpp  generateQuadSphere.cpp  generateUVSphere.cpp  generateVertexBuffer.cpp
src/glengine/SceneObject/Light/: BaseLight.cpp  BaseLight.hpp  DirectionalLight.cpp  DirectionalLight.hpp  PointLight.cpp  PointLight.hpp  SpotLight.cpp  SpotLight.hpp  light.hpp
src/glengine/SceneObject/Mesh/: Material.cpp  Mesh.cpp  Mesh.hpp  Texture.cpp  loadTexture.cpp  loadTexture.hpp
src/glengine/SceneObject/Mesh/procedural/: generateCube.cpp  generateIcoSphere.cpp  generatePlane.cpp  generateQuadSphere.cpp  generateUVSphere.cpp  generateVertexBuffer.cpp
src/glengine/filesystem/: filesystem.cpp  filesystem.hpp  loadMap.cpp  loadMap.hpp
src/glengine/scene/: scene.hpp  sceneObject.hpp
src/glengine/scene/camera/: BaseCamera.cpp  BaseCamera.hpp  Camera3DoFController.cpp  Camera5DoFController.cpp  Camera6DoFController.cpp  Camera6DoFController.hpp  OrthographicCamera.cpp  PerspectiveCamera.cpp
src/glengine/scene/light/: light.cpp  light.hpp
src/glengine/scene/mesh/: generateMesh.cpp  generateVertexBuffer.cpp  loadTexture.cpp  mesh.hpp
src/glengine/scene/mesh/procedural/: calculateTangent.cpp  generateCube.cpp  generateIcoSphere.cpp  generatePlane.cpp  generateQuadSphere.cpp  generateUVSphere.cpp
src/glengine/scene/rendering/: rendering.cpp  rendering.hpp
src/glengine/shader/: shader.cpp  shader.hpp
src/glservice/: CMakeLists.txt  filesystem.cpp  gldebug.hpp  glinit.cpp  glinit.hpp  glservice.hpp  libinit.cpp  libinit.hpp  shader.cpp  shader.hpp
src/glservice/camera/: BaseCamera.cpp  Camera3DoFController.cpp  Camera5DoFController.cpp  Camera5DoFController.hpp  Camera6DoFController.cpp  OrthographicCamera.cpp  OrthographicCamera.hpp  PerspectiveCamera.cpp  camera.hpp
src/glservice/mesh/: calculateTangent.cpp  generateCube.cpp  generateIcoSphere.cpp  generateMesh.cpp  generatePlane.cpp  generateQuadSphere.cpp  generateUVSphere.cpp  generateVertexBuffer.cpp  loadTexture.cpp  mesh.hpp  renderMesh.cpp
src/glservice/sceneObject/: calculateTangent.cpp  generateCube.cpp  generateIcoSphere.cpp  generateMesh.cpp  generatePlane.cpp  generateQuadSphere.cpp  loadTexture.cpp  (+4 more)
src/triangle/: CMakeLists.txt  fragmentShader.glsl  main.cpp  triangleFS.glsl  vertexShader.glsl
