SET(TARGET 4-advanced_opengl)

FILE(GLOB_RECURSE SRC_FILES "${SRC_DIR}/${TARGET}/*.cpp" "${SRC_DIR}/glengine/*.cpp")
ADD_EXECUTABLE(${TARGET} ${SRC_FILES})

ADD_DEPENDENCIES(dev ${TARGET})

SET_TARGET_PROPERTIES(${TARGET} PROPERTIES CXX_EXTENSIONS OFF)
SET_TARGET_PROPERTIES(${TARGET} PROPERTIES CXX_STANDARD 17)
SET_TARGET_PROPERTIES(${TARGET} PROPERTIES CXX_STANDARD_REQUIRED ON)

TARGET_COMPILE_OPTIONS(${TARGET} PUBLIC
  $<$<COMPILE_LANG_AND_ID:CXX,GNU,Clang>:-Wall -Wextra -Wpedantic -g -fsanitize=address,undefined>
)
TARGET_LINK_OPTIONS(${TARGET} PUBLIC
  $<$<LINK_LANG_AND_ID:CXX,GNU,Clang>:-lX11 -g -fsanitize=address,undefined>
)

TARGET_INCLUDE_DIRECTORIES(${TARGET} PRIVATE ${INC_DIR} "${SRC_DIR}/glengine")
FILE(GLOB_RECURSE LIB_FILES "${LIB_DIR}/*.a" "${LIB_DIR}/*.so" "${LIB_DIR}/*.lib")
TARGET_LINK_LIBRARIES(${TARGET} PRIVATE ${LIB_FILES})

FIND_PACKAGE(Qt5 COMPONENTS Core REQUIRED)
TARGET_INCLUDE_DIRECTORIES(${TARGET} PRIVATE Qt)
TARGET_LINK_LIBRARIES(${TARGET} PRIVATE ${Qt5Core_LIBRARIES})

FILE(GLOB SHADER_FILES "${SRC_DIR}/${TARGET}/*.glsl")
ADD_CUSTOM_TARGET("${TARGET}-copy-shaders"
  COMMAND cp ${SHADER_FILES} ${BIN_DIR}
)
ADD_DEPENDENCIES(${TARGET} "${TARGET}-copy-shaders")
