SET(TARGET triangle)

FILE(GLOB_RECURSE SRC_FILES "${SRC_DIR}/${TARGET}/*.cpp" "${SRC_DIR}/${TARGET}/*.c")
ADD_EXECUTABLE(${TARGET} ${SRC_FILES} "${LIB_DIR}/glad.c")

TARGET_INCLUDE_DIRECTORIES(${TARGET} PRIVATE ${HDR_DIR})

FILE(GLOB_RECURSE LIB_FILES "${LIB_DIR}/*.a" "${LIB_DIR}/*.so")
TARGET_LINK_LIBRARIES(${TARGET} PRIVATE ${LIB_FILES})

FIND_PACKAGE(Qt5 COMPONENTS Core Quick REQUIRED)
TARGET_INCLUDE_DIRECTORIES(${TARGET} PRIVATE Qt)
TARGET_LINK_LIBRARIES(${TARGET} PRIVATE ${Qt5Core_LIBRARIES} ${Qt5Quick_LIBRARIES})

SET(COMPILER_OPTIONS -Wall -Wextra -Wpedantic)
TARGET_COMPILE_OPTIONS(${TARGET} PUBLIC ${COMPILER_OPTIONS})
SET(LINKER_OPTIONS -lX11)
TARGET_LINK_OPTIONS(${TARGET} PUBLIC ${LINKER_OPTIONS})

SET_TARGET_PROPERTIES(${TARGET} PROPERTIES C_EXTENSIONS OFF)
SET_TARGET_PROPERTIES(${TARGET} PROPERTIES C_STANDARD 17)
SET_TARGET_PROPERTIES(${TARGET} PROPERTIES C_STANDARD_REQUIRED ON)
SET_TARGET_PROPERTIES(${TARGET} PROPERTIES CXX_EXTENSIONS OFF)
SET_TARGET_PROPERTIES(${TARGET} PROPERTIES CXX_STANDARD 17)
SET_TARGET_PROPERTIES(${TARGET} PROPERTIES CXX_STANDARD_REQUIRED ON)

FILE(GLOB SHADER_FILES "${SRC_DIR}/${TARGET}/*.glsl")
ADD_CUSTOM_TARGET(copy-shaders
    COMMAND cp ${SHADER_FILES} ${BIN_DIR}
)
ADD_DEPENDENCIES(${TARGET} copy-shaders)

ADD_DEPENDENCIES(dev ${TARGET})
